fixing another css bug with padding being too large on large browser size

--- a/css/global.css
+++ b/css/global.css
@@ -70,7 +70,7 @@ h1{
 	color: white;
 	font-family: "verdana";
 	text-align: center;
-	padding-top: 20%;
+	padding-top: 85px;
 	padding-bottom: 30px;
 	margin: 0 auto;
 	max-width: 800px;
